# coursify

./: .gitignore  Cargo.toml  builder.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
site/: astro.config.mjs  ffi.js  package-lock.json  package.json
site/src/components/: Card.astro
site/src/layouts/: Layout.astro
site/src/pages/: index.astro
src/: lib.rs
src/lib/: mod.rs
