[package]
name = "coursify"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "coursify_util"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
figlet-rs = "0.1.3"
serde = {version= "1", features = ["derive"]}
serde_json = "1"
termcolor = "1.1"
cmder = "0.5.2"
directories = "4.0.1"
walkdir = "2.3.2"
ffmpeg_cmdline_utils = "0.1.1"
# ffmpeg4-ffi = "0.3.8"
ffmpeg-next = "5.0.3"
